--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -2,45 +2,98 @@
 @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@400;600&display=swap');
 
 
-* {
-    box-sizing: border-box;
-}
+// * {
+//     box-sizing: border-box;
+// }
 
-body {
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background-image: linear-gradient(blue, pink);
-    overflow: hidden;
-    font-family: 'Manrope';
-    padding: 10px;
+// body {
+//     width: 100vw;
+//     height: 100vh;
+//     display: flex;
+//     flex-direction: column;
+//     align-items: center;
+//     justify-content: center;
+//     background-image: linear-gradient(blue, pink);
+//     overflow: hidden;
+//     font-family: 'Manrope';
+//     padding: 10px;
+//     margin: 0;
+// }
+
+body, html {
+    background-color: #000;
+    color: #fff;
+    width: 100%;
+    height: 100%;
     margin: 0;
+    padding: 0;
+    overflow: hidden;
 }
-.profile {
+canvas {
+    position:absolute;
+    top:0;
+    left:0
+}
+
+@import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Raleway', sans-serif;
+  z-index: 0;
+}
+body {
+  height: 100vh;
+  padding: 18px;
+  .header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    &_title {
+      color: white;
+      font-size: 26px;
+      font-family: 'Raleway', sans-serif;
+      text-transform: uppercase;
+      letter-spacing: 2px;
+    }
+    &_nav {
+    }
+    &_list {
+      list-style-type: none;
+      display: flex;
+      align-items: center;
+      justify-content: space-around;
+    }
+    &_item {
+      color: white;
+      font-size: 16px;
+      font-family: 'Raleway', sans-serif;
+      text-transform: uppercase;
+      &:not(last-child) {
+        margin-right: 10px;
+      }
+    }
+  }      
+  .main {
+    height: 400px;
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: center;
-}
-
-.profile_photo {
-    width: 250px;
-    height: 250px;
-    border-radius: 50%;
-    background-image: url('https://res.cloudinary.com/dlxkadzbp/image/upload/v1587071328/eu_w11o3j.jpg');
-    background-position: center;
-    background-size: cover;
-}
-.profile_title {
-    font-weight: 600;
-    margin-bottom: 0;
-    font-size: 30px;
-}
-
-.profile_subtitle {
-    font-weight: 400;
-    margin-top: 0;
+    align-items: flex-start;
+    padding-left: 50px;
+    &_wrap {
+      color: white;
+    }
+    &_title {
+      margin-bottom: 15px;
+      text-transform: uppercase;
+      font-size: 45px;
+    }
+    &_subtitle {
+      text-transform: uppercase;
+      color: lightblue;
+      font-size: 28px;
+    }
+  }
 }
