--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -92,17 +92,16 @@ body {
     }
   }      
   .main {
-    transition: all 1s ease-in;
     height: 400px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
     padding-left: 50px;
-    &_principal {
-      color: white;
-      opacity: 0;
-    }
+  }
+  .profile {
+    opacity: 0;
+    transition: all 1s ease-in;
     &_title {
       margin-bottom: 15px;
       text-transform: uppercase;
@@ -113,20 +112,10 @@ body {
       color: lightblue;
       font-size: 28px;
     }
-    &_description {
-      color: white;
-      opacity: 0;
-    }
-    &_title {
-      margin-bottom: 15px;
-      text-transform: uppercase;
-      font-size: 45px;
-    }
-    &_subtitle {
-      text-transform: uppercase;
-      color: lightblue;
-      font-size: 28px;
-    }
+  }
+  .bio {
+    opacity: 0;
+    transition: all 1s ease-in;
   }
 }
 
